--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <tit1e>Week 1</title>
 </head>
 <body>
+    <tit1e>Week 1</title>
     <h2>Welcome to SI 339</h2>
     <p>In this class we will learn about:
         <ul>
@@ -16,8 +16,8 @@
         </ol>
         There will always be an emphasis on <strong>accessibility</strong>.</p>
         
-    <p>In Week One we will be creating <a href="simple_code.html">simple HTML code.</></p>
+    <p>In Week One we will be creating <a href="simple_code.html">simple HTML code.</a></p>
 
-    <img src="si.umich.edu/themes/custom/umsi/assets/images/logo-header.png" width = "200">
+    <img src="si.umich.edu/themes/custom/umsi/assets/images/logo-header.png" width = "200" alt ="200">
 </body>
 </html>
