--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Week 1</title>
 </head>
 <body>
-    <tit1e>Week 1</title>
     <h2>Welcome to SI 339</h2>
-    <p>In this class we will learn about:
-        <ul>
+    <p>In this class we will learn about:</p>
+        <ol>
             <li>HTML,</li>
             <li>CSS,</li>
             <li>JavaScript, and</li>
@@ -17,7 +17,6 @@
         There will always be an emphasis on <strong>accessibility</strong>.</p>
         
     <p>In Week One we will be creating <a href="simple_code.html">simple HTML code.</a></p>
-
     <img src="si.umich.edu/themes/custom/umsi/assets/images/logo-header.png" width = "200" alt ="200">
 </body>
 </html>
